--- a/docs/代码快照.md
+++ b/docs/代码快照.md
@@ -56,4 +56,4 @@ enemy state
 - weapon: short_missile / middle_missile + target_id
 
 ## 关于step与reward相关
-采用分布式自博弈，参考xxx
+每一个飞机一个奖励，目前只加了命中奖励，还需要加dense reward
